<resources>
    <string name="app_name">MVCAPP</string>
    <string name="city">City</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="_03_07_2022_13_00">03.07.2022 13:00</string>
    <string name="madrid">Madrid</string>
    <string name="_26_c">26 C</string>
    <string name="sunny">Sunny</string>
    <string name="_23_25">23/25</string>
    <string name="get">get</string>
</resources>